logs/validate.20260408-070637.log
Mode: isolate
Isolate: including Chap47 Chap18 Chap02
error: expected delimiter
   --> src/Chap47/VecChainedHashTableStEph.rs:320:42
    |
320 | ...                   implies !#[trigger] table.table@[j].spec_entry_to_map().dom().contains(*key) by {}
    |                                ^

error[E0425]: cannot find type `VecChainedHashTableStEph` in this scope
   --> src/Chap47/VecChainedHashTableStEph.rs:623:30
    |
623 |       impl std::fmt::Debug for VecChainedHashTableStEph {
    |                                ^^^^^^^^^^^^^^^^^^^^^^^^
    |
   ::: src/Chap47/ChainedHashTable.rs:165:9
    |
165 | / ...   pub trait ChainedHashTable<Key: StT, Value: StT, Entry: EntryTrait<Key, Value>, Metrics: Default, H: Fn(&Key, ...
166 | | ...       ParaHashTableStEphTrait<Key, Value, Entry, Metrics, H>
167 | | ...   {
168 | | ...       /// Computes the hash index for a key.
...   |
176 | | ...               index as nat == (table.spec_hash@)(*key) % (table.current_size as nat);
177 | | ...   }
    | |_______- similarly named trait `ChainedHashTable` defined here
    |
help: a trait with a similar name exists
    |
623 -     impl std::fmt::Debug for VecChainedHashTableStEph {
623 +     impl std::fmt::Debug for ChainedHashTable {
    |

error[E0425]: cannot find type `VecChainedHashTableStEph` in this scope
   --> src/Chap47/VecChainedHashTableStEph.rs:629:32
    |
629 |       impl std::fmt::Display for VecChainedHashTableStEph {
    |                                  ^^^^^^^^^^^^^^^^^^^^^^^^
    |
   ::: src/Chap47/ChainedHashTable.rs:165:9
    |
165 | / ...   pub trait ChainedHashTable<Key: StT, Value: StT, Entry: EntryTrait<Key, Value>, Metrics: Default, H: Fn(&Key, ...
166 | | ...       ParaHashTableStEphTrait<Key, Value, Entry, Metrics, H>
167 | | ...   {
168 | | ...       /// Computes the hash index for a key.
...   |
176 | | ...               index as nat == (table.spec_hash@)(*key) % (table.current_size as nat);
177 | | ...   }
    | |_______- similarly named trait `ChainedHashTable` defined here
    |
help: a trait with a similar name exists
    |
629 -     impl std::fmt::Display for VecChainedHashTableStEph {
629 +     impl std::fmt::Display for ChainedHashTable {
    |

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 3s
Sampled Memory Usage: peak rust_verify RSS: 2796MB, peak z3 RSS: 380MB, min free: 22917MB
Sampled CPU Usage: rust_verify: 30s, z3 children: 10s
